[package]
name = "tp-auto-kbbl"
version = "0.1.3"
authors = ["Tobias Dühr <tobiasduehr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
log = "0.4.8"
dbus = "0.8.1"
evdev-rs = "0.3.1"
nix = "0.13.1"