[package]
name = "tp-auto-kbbl"
version = "0.1.4"
authors = ["Tobias Dühr <tobiasduehr@gmail.com>"]
edition = "2018"
homepage = "https://github.com/saibotd/tp-auto-kbbl"
license = "MIT"
repository = "https://github.com/saibotd/tp-auto-kbbl.git"
readme = "readme.md"
documentation = "https://github.com/saibotd/tp-auto-kbbl/blob/master/readme.md"
description = "Auto toggle keyboard back-lighting on Thinkpads (and maybe other laptops) for Linux"
categories = ["command-line-utilities"]
keywords = ["tool", "thinkpad"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
log = "0.4"
dbus = "0.8"
evdev-rs = "0.4"
nix = "0.18"
